[project]
name = "comfyui-api-nodes"
description = "Adds nodes that are designed to be used for scripting ComfyUI. These nodes just describe themselves as 'api'. This can be used in conjunction with the npm library '@hypnodes/comfyui-api-nodes' for scripting via javascript."
version = "2.52.4"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/hypnodes/ComfyUI_ApiNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hypnodes"
DisplayName = "Api Nodes"
Icon = "https://raw.githubusercontent.com/hypnodes/ComfyUI_ApiNodes/d57125be90d1dd95917f8e68eb4ce4f50c875e93/icon.png"

